#
# Copyright (c) Contributors to the Open 3D Engine Project. For complete copyright and license terms please see the LICENSE at the root of this distribution.
# 
# SPDX-License-Identifier: Apache-2.0 OR MIT
#
#

add_subdirectory(Asset)
add_subdirectory(Bootstrap)
add_subdirectory(Component)
add_subdirectory(Feature)
add_subdirectory(RHI)
add_subdirectory(RPI)
add_subdirectory(Tools)
add_subdirectory(Utils)

